# signalk-rs

./: .codecov.yml  .gitignore  Cargo.toml  docker-compose.test.yml  docker-compose.yml  signalk-rs.example.toml
.github/workflows/: ci.yml  conformance-compare.yml
bridge/: package-lock.json  package.json
bridge/src/: app.js  index.js  nmea-tcp.js  streambundle.js
bridge/src/plugins/: loader.js
bridge/src/transport/: index.js  uds.js
crates/plugins/anchor-alarm/: Cargo.toml
crates/plugins/anchor-alarm/src/: lib.rs
crates/plugins/autopilot/: Cargo.toml  RESEARCH.md  SAFETY.md
crates/plugins/autopilot/src/: filter.rs  lib.rs  pd.rs  provider.rs  state.rs
crates/plugins/autopilot/src/modes/: heading.rs  mod.rs  route.rs
crates/plugins/autopilot/tests/: simulation.rs
crates/plugins/derived-data/: Cargo.toml
crates/plugins/derived-data/src/: lib.rs
crates/plugins/derived-data/src/calculators/: air_density.rs  bearing_magnetic.rs  course_bearing.rs  course_distance.rs  course_over_ground_magnetic.rs  course_xte.rs  dew_point.rs  eta.rs  heading_true.rs  heat_index.rs  leeway.rs  mod.rs  previous_point_distance.rs  set_drift.rs  steer_error.rs  suntime.rs  tank_volume.rs  true_wind.rs  vmg_stw.rs  vmg_waypoint.rs  wind_chill.rs  wind_direction_magnetic2.rs  wind_ground.rs  wind_ground_direction.rs  wind_shift.rs
crates/plugins/nmea0183-receive/: Cargo.toml
crates/plugins/nmea0183-receive/src/: ais_decode.rs  dsc_decode.rs  lib.rs  sentences.rs  xdr.rs
crates/plugins/nmea0183-receive/src/sentences/: course.rs  depth.rs  environment.rs  gnss.rs  heading.rs  mod.rs  position.rs  propulsion.rs  wind.rs
crates/plugins/nmea0183-send/: Cargo.toml
crates/plugins/nmea0183-send/src/: lib.rs
crates/plugins/nmea2000-receive/: Cargo.toml
crates/plugins/nmea2000-receive/src/: lib.rs  pgn_convert.rs
crates/plugins/nmea2000-receive/src/pgn/: ais.rs  environment.rs  mod.rs  navigation.rs  propulsion.rs
crates/plugins/nmea2000-send/: Cargo.toml
crates/plugins/nmea2000-send/src/: lib.rs
crates/plugins/sensor-data-simulator/: Cargo.toml
crates/plugins/sensor-data-simulator/src/: lib.rs  output_direct.rs  output_nmea0183.rs  output_nmea2000.rs
crates/plugins/signalk-ais-status/: Cargo.toml
crates/plugins/signalk-ais-status/src/: lib.rs
crates/plugins/signalk-anchor-alarm/: Cargo.toml
crates/plugins/signalk-anchor-alarm/src/: lib.rs
crates/plugins/signalk-derived-data/: Cargo.toml
crates/plugins/signalk-derived-data/src/: lib.rs
crates/plugins/signalk-derived-data/src/calculators/: air_density.rs  battery_power.rs  course_distance.rs  course_over_ground_true.rs  course_xte.rs  depth_below_keel.rs  depth_below_surface.rs  eta.rs  fuel_consumption.rs  heading_true.rs  heat_index.rs  leeway.rs  leeway_angle.rs  mod.rs  moon.rs  prop_slip.rs  prop_state.rs  set_drift.rs  suncalc.rs  transducer_to_keel.rs  true_wind.rs  vmg.rs  vmg_stw.rs  wind_direction_magnetic.rs
crates/plugins/signalk-nmea0183/: Cargo.toml
crates/plugins/signalk-nmea0183/src/: lib.rs  sentences.rs
crates/plugins/signalk-plugin-simulator/: Cargo.toml
crates/plugins/signalk-plugin-simulator/src/: generators.rs  lib.rs
crates/plugins/system-info/: Cargo.toml
crates/plugins/system-info/src/: lib.rs  network.rs  syshealth.rs  time_sync.rs
crates/plugins/tracks/: Cargo.toml
crates/plugins/tracks/src/: api.rs  geojson.rs  gpx.rs  lib.rs  simplify.rs  store.rs  types.rs
crates/signalk-internal/: Cargo.toml
crates/signalk-internal/src/: http.rs  lib.rs  protocol.rs  server.rs  transport.rs  uds.rs
crates/signalk-nmea0183/: Cargo.toml
crates/signalk-nmea0183/src/: lib.rs  provider.rs  serial_provider.rs
crates/signalk-plugin-api/: Cargo.toml
crates/signalk-plugin-api/src/: autopilot.rs  context.rs  error.rs  lib.rs  plugin.rs  resources.rs  testing.rs
crates/signalk-plugin-client/: Cargo.toml
crates/signalk-plugin-client/src/: lib.rs
crates/signalk-server/: Cargo.toml
crates/signalk-server/benches/: api_throughput.rs  store_throughput.rs
crates/signalk-server/src/: config.rs  config_reference.rs  config_store.rs  lib.rs  main.rs  webapps.rs
crates/signalk-server/src/api/: admin.rs  mod.rs  server_routes.rs  tracks.rs  webapps.rs
crates/signalk-server/src/api/v2/: autopilot.rs  course.rs  features.rs  history.rs  mod.rs  notifications.rs  resources.rs
crates/signalk-server/src/auth/: mod.rs
crates/signalk-server/src/autopilot/: manager.rs  mod.rs
crates/signalk-server/src/course/: manager.rs  mod.rs
crates/signalk-server/src/history/: config.rs  ingestion.rs  mod.rs  provider.rs  query.rs
crates/signalk-server/src/notifications/: manager.rs  mod.rs
crates/signalk-server/src/plugins/: delta_filter.rs  host.rs  isolation.rs  manager.rs  mod.rs  registry.rs  routes.rs
crates/signalk-server/src/resources/: file_provider.rs  mod.rs  registry.rs
crates/signalk-server/src/unitpreferences/: api.rs  loader.rs  mod.rs  resolver.rs  types.rs
crates/signalk-server/src/ws/: admin_messages.rs  mod.rs
crates/signalk-server/tests/: admin_api.rs  api_conformance.rs  course_api.rs  data_flow.rs  features_api.rs  helpers.rs  history_api.rs  notifications_api.rs  plugin_integration.rs  resources_api.rs  server_routes.rs  ws_conformance.rs
crates/signalk-sqlite/: Cargo.toml
crates/signalk-sqlite/src/: lib.rs  migration.rs
crates/signalk-store/: Cargo.toml
crates/signalk-store/benches/: store_bench.rs
crates/signalk-store/src/: lib.rs  store.rs  subscription.rs
crates/signalk-types/: Cargo.toml
docker/: Dockerfile.bridge  Dockerfile.rs  entrypoint.sh  signalk-rs.toml
docs/: plugin-architecture.md  writing-a-rust-plugin.md  writing-a-standalone-plugin.md
scripts/: update-schemas.sh
tests/bridge-plugin/: Dockerfile.bridge  docker-compose.yml  verify.js
tests/conformance/: Dockerfile  Dockerfile.data  Dockerfile.original  Dockerfile.v2  compare.js  data_compare.js  v2_verify.js
tests/plugin-compat/: docker-compose.yml  verify.js
tests/smoke/: checks.sh  ws-hello.js
webapps/: package-lock.json  package.json
(+26 files in other folders)
