[workspace]
members = [
    "crates/signalk-types",
    "crates/signalk-store",
    "crates/signalk-server",
    "crates/signalk-internal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["signalk-rs contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = { version = "9" }

# TLS
rustls = { version = "0.23" }

# Logging / Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = { version = "0.14", features = ["toml"] }

# Errors
thiserror = { version = "2" }
anyhow = { version = "1" }

# Async trait
async-trait = { version = "0.1" }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
signalk-types = { path = "crates/signalk-types" }
signalk-store = { path = "crates/signalk-store" }
signalk-internal = { path = "crates/signalk-internal" }

# Testing & Benchmarking (dev only)
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }
jsonschema = { version = "0.29" }
tokio-tungstenite = { version = "0.26" }
futures-util = { version = "0.3" }
