[package]
name = "signalk-internal"
description = "SignalK internal API transport abstraction (UDS, HTTP, future: SHM/io_uring)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["uds"]
uds = []
http = []

[dependencies]
signalk-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
hyper.workspace = true
hyper-util.workspace = true
uuid.workspace = true
