[package]
name = "signalk-nmea0183"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NMEA 0183 input provider for signalk-rs"

[dependencies]
signalk-types.workspace = true
tokio = { workspace = true }
nmea.workspace = true
tokio-serial = { workspace = true }
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
