[package]
name = "signalk-plugin-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust client library for standalone (Tier 3) signalk-rs plugins over Internal API"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
signalk-sqlite.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
