[package]
name = "signalk-server"
description = "SignalK server: REST API, WebSocket streaming, plugin bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "signalk-server"
path = "src/main.rs"

[lib]
name = "signalk_server"
path = "src/lib.rs"

[dependencies]
signalk-types.workspace = true
signalk-plugin-api = { workspace = true, features = ["testing"] }
signalk-store.workspace = true
signalk-internal.workspace = true
nmea0183-receive.workspace = true
anchor-alarm.workspace = true
derived-data.workspace = true
ais-status.workspace = true
tracks.workspace = true
system-info.workspace = true
autopilot.workspace = true
signalk-sqlite.workspace = true
sensor-data-simulator = { workspace = true, optional = true }
nmea2000-receive = { workspace = true, optional = true }
nmea0183-send = { workspace = true, optional = true }
nmea2000-send = { workspace = true, optional = true }
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true

[features]
default = []
simulator = ["sensor-data-simulator"]
nmea2000 = ["nmea2000-receive", "nmea2000-send"]
nmea0183-output = ["nmea0183-send"]
autopilot-experimental = ["autopilot/experimental"]

[dev-dependencies]
reqwest.workspace = true
jsonschema.workspace = true
tokio = { workspace = true, features = ["full"] }
criterion.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
signalk-types.workspace = true
signalk-store.workspace = true
tempfile = "3"

[[bench]]
name = "api_throughput"
harness = false

[[bench]]
name = "store_throughput"
harness = false
