[package]
name = "signalk-store"
description = "SignalK in-memory data store with delta processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
signalk-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "store_bench"
harness = false
