[package]
name = "anchor-alarm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Anchor alarm plugin for signalk-rs — alerts when vessel drifts beyond radius"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
async-trait.workspace = true

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
