[package]
name = "derived-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derived data plugin for signalk-rs — computes values from raw sensor data"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
async-trait.workspace = true
sun = "0.3.1"
moon-phase = "0.1.0"
chrono.workspace = true

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
