[package]
name = "nmea2000-receive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NMEA 2000 input plugin for signalk-rs (SocketCAN)"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio = { workspace = true }
nmea2000.workspace = true
nmea2000-pgns.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
