[package]
name = "signalk-derived-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derived data plugin for signalk-rs — computes values from raw sensor data"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
