[package]
name = "signalk-plugin-nmea0183"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NMEA 0183 input plugin for signalk-rs (TCP + serial)"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio = { workspace = true }
nmea.workspace = true
tokio-serial.workspace = true
tracing.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
