[package]
name = "system-info"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System information plugin for signalk-rs — exposes OS/network/hardware metrics via REST"

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
libc = "0.2"

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
