[package]
name = "tracks"
description = "Vessel position track recording — stores history for self and AIS targets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
signalk-plugin-api.workspace = true
signalk-types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
signalk-plugin-api = { workspace = true, features = ["testing"] }
